# csrf-poc-forge

./: .gitignore  LICENSE  README.md  notes.md  parse_request.py  poc.html  pyproject.toml  request.txt
burp-extension/: README.md  build.gradle  settings.gradle
burp-extension/src/main/java/csrfforge/: CsrfContextMenu.java  CsrfForgeExtension.java  CsrfForgeTab.java  PocGenerator.java
csrf_forge/: cli.py
