[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csrf-forge"
version = "0.1.0"
description = "Convert raw HTTP requests into HTML CSRF Proof-of-Concept files for authorized security testing."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "CosminB24" }]
keywords = ["csrf", "security", "pentesting", "poc"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
csrf-forge = "csrf_forge.cli:main"

[tool.setuptools.packages.find]
include = ["csrf_forge*"]
